# MTask

./: .clang-format  .clang-tidy  .codespellrc  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE  README.md  conanfile.py  dir_0bc03bb23c24d5bfebb35c78b2a8beb0.html  dir_0bc03bb23c24d5bfebb35c78b2a8beb0.js  dir_49e56c817e5e54854c35e136979f97ca.html  dir_ef3b2545113449f8f25e623a543d64e3.html  files.html  files_dup.js  globals.html  globals_defs.html  graph_legend.html  index.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js  pages.html
.github/: pull_request_template.md
.github/workflows/: ci.yml
cmake/: cmake-config.cmake.in  docs.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  options.cmake  project-is-top-level.cmake
d4/d9e/: namespacemtask.html
d7/dad/: version_8hpp.html  version_8hpp.js  version_8hpp_source.html
da/ddd/: README_8md.html
db/d07/: about.html
db/d4d/: about_8dox.html
dc/de2/: mtask_8hpp__incl.dot
de/d85/: mtask_8hpp.html  mtask_8hpp.js  mtask_8hpp_source.html
docs/: Doxyfile.in
example/: CMakeLists.txt
example/src/: example.cpp
include/mtask/: mtask.hpp  version.hpp
search/: all_0.js  all_1.js  all_3.js  all_4.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  namespaces_0.js  pages_0.js  pages_1.js  searchdata.js
src/: mtask.cpp
test/: CMakeLists.txt
test/src/: sanity-tests.cpp
test_package/: CMakeLists.txt  conanfile.py
